[package]
name = "rand_seeder"
version = "0.2.1" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/seeder"
documentation = "https://docs.rs/rand_seeder"
description = """
A universal random number seeder based on SipHash.
"""
keywords = ["random", "rng", "seeder"]
categories = ["algorithms", "no-std"]

[badges]
travis-ci = { repository = "rust-random/rand" }

[dependencies]
rand_core = { version = ">= 0.1, <= 0.5", default-features = false }
