[package]
name = "rand_seeder"
version = "0.4.0" # NB: When modifying, also modify html_root_url in lib.rs
authors = ["The Rand Project Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-random/seeder"
documentation = "https://docs.rs/rand_seeder"
homepage = "https://rust-random.github.io/book/guide-seeding.html#a-string-or-any-hashable-data"
description = """
A universal random number seeder based on SipHash.
"""
keywords = ["random", "rng", "seeder"]
categories = ["algorithms", "no-std"]
edition = "2021"
rust-version = "1.63"

[dependencies]
rand_core = { version = "0.9.0", default-features = false, path = "../rand/rand_core" }

[lints.clippy]
unit_arg = "allow"
println_empty_string = "allow"
